src/test/ui/consts/read_from_static_mut_ref.stderr
error[E0658]: references in statics may only refer to immutable values
  --> $DIR/read_from_static_mut_ref.rs:4:26
   |
LL | static OH_NO: &mut i32 = &mut 42;
   |                          ^^^^^^^ statics require immutable values
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
